# skill-studio

./: .gitignore  PROJECT-PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
datalog/: 2026-04-27_15-41-26.jsonl  2026-04-27_15-41-26.md
datalog/llm/: 2026-04-27_07-41-26_834.json  2026-04-27_07-41-30_215.json  2026-04-27_07-41-33_013.json  2026-04-27_07-41-37_208.json  2026-04-27_07-41-40_602.json  2026-04-27_07-41-49_202.json
docs/plans/: 2026-03-25-antigravity-shell-replacement-design.md  2026-03-25-antigravity-shell-replacement.md  2026-03-25-compact-workbench-structure-fix-design.md  2026-03-25-compact-workbench-structure-fix.md  2026-03-25-desktop-console-ui-design.md  2026-03-25-desktop-console-ui.md  2026-04-02-skills-refactor-execution-plan.md  2026-04-08-desktop-ui-density-design.md  2026-04-08-desktop-ui-density.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: manifest.rs  mod.rs  skills.rs  system.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/backup/: mod.rs
src-tauri/src/core/diagnostics/: mod.rs
src-tauri/src/core/installer/: mod.rs
src-tauri/src/core/manifest/: mod.rs
src-tauri/src/core/skills/: mod.rs
src-tauri/src/core/sync/: mod.rs
src/app/: routes.tsx
src/features/backups/: page.tsx
src/features/overview/: page.tsx
src/features/settings/: page.tsx
src/features/skills/: page.tsx  use-skills.ts
src/features/sources/: page.tsx
src/shared/components/: app-shell.tsx  workbench-ui.tsx
(+14 files in other folders)
